--- a/blank2.html
+++ b/blank2.html
@@ -244,7 +244,7 @@
 <body class="font-sans bg-primary-50 text-gray-800 antialiased">
     <!-- Back to top button -->
     <button id="back-to-top" class="back-to-top bg-accent-500 text-white p-3 rounded-full shadow-lg hover:bg-accent-600">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <svg xmlns="http://www.w3.org/2000/svNg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18" />
         </svg>
     </button>
