--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mr-2 text-accent-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
                             </svg>
-                            Sabie<span class="text-accent-500">exports</span>.ng
+                            Sabi<span class="text-accent-500">exports</span>.ng
                         </a>
                     </div>
                     <div class="hidden md:ml-10 md:flex md:items-center md:space-x-6">
